Major new features in 2.7 release
---------------------------------

- New AUI library supporting docking windows and much more


2.7.2
-----

All (GUI): 

- wxMemoryDC constructor now optionally accepts a wxBitmap parameter,
  calling SelectObject itself if a valid bitmap is passed.
- Reverted wxBuffered[Paint]DC to pre 2.7.1 state, added
  wxAutoBufferedPaintDC and wxAutoBufferedPaintDCFactory.

Unix Ports:

- Added autopackage for wxGTK and an example of using autopackage for a wx
  program (Francesco Montorsi)



2.7.1
-----

All:

- Added wxDir::FindFirst() (Francesco Montorsi).
- Added wxPlatformInfo class (Francesco Montorsi).
- Added wxLocale::IsAvailable() (Creighton).
- Added Malay translations (Mahrazi Mohd Kamal)
- Added reference counting for wxVariant
- For consistency, all classes having Ok() method now also have IsOk() one, use
  of the latter form is preferred although the former hasn't been deprecated yet
- Added wxFileName::Is(Dir|File)(Writ|Read|Execut)able() (Francesco Montorsi)
- Added wxFileName::GetSize() and GetHumanReadableSize() (Francesco Montorsi)
- Added wxSizer::Replace (Francesco Montorsi)
- wxXmlDocument can now optionally preserve whitespace (Francesco Montorsi)
- Added wxBookCtrl::ChangeSelection() and wxTextCtrl::ChangeValue() to provide
  event-free alternatives to SetSelection() and SetValue() functions; see the
  "Events generated by the user vs programmatically generated events" paragraph
  in the "Event handling overview" topic for more info

All (GUI):

- Support for right-to-left text layout (started by Diaa Sami during Google Summer of
  Code, with a lot of help from Tim Kosse and others).
- wxAnimationCtrl added (Francesco Montorsi)
- Added wxAboutBox() function for displaying the standard about dialog
- Added wxID_PAGE_SETUP standard id.
- Added wxSize::IncBy() and DecBy() methods.
- Added wxTextCtrl::IsEmpty()
- Added file type parameter to wxTextCtrl::LoadFile, wxTextCtrl::SaveFile for